move available/selected to ul

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -24,3 +24,11 @@ body {
 .slds-icon {
 	fill: currentColor;
 }
+
+.picklist-label {
+    margin: auto;
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    cursor: default;
+}
