move background override to app

--- a/app/views/util/tabset.html
+++ b/app/views/util/tabset.html
@@ -1,4 +1,4 @@
 <div class="slds-tabs--scoped">
 	<ul class="slds-tabs--scoped__nav" style="margin-bottom:0;" role="tablist" ng-transclude></ul>
-	<div class="slds-tabs--scoped__content" style="background-color:inherit;" ng-repeat="tab in tabs" ng-class="{'slds-show': tab.active, 'slds-hide': !tab.active}" li-tab-content-transclude="tab"></div>
+	<div class="slds-tabs--scoped__content" ng-repeat="tab in tabs" ng-class="{'slds-show': tab.active, 'slds-hide': !tab.active}" li-tab-content-transclude="tab"></div>
 </div>
