--- a/app/views/fields/lookup/lookup-dropdown.html
+++ b/app/views/fields/lookup/lookup-dropdown.html
@@ -1,15 +1,22 @@
 <div class="slds-lookup__menu" role="listbox">
-  <div class="slds-lookup__item">
-    <button class="slds-button">
-      <span li-icon type="utility" icon="search" size="small" color="default"></span>
-      &quot;{{currentVal}}&quot; in {{theObject}}</button>
-  </div>
-  <ul class="slds-lookup__list" role="presentation">
-    <li class="slds-lookup__item" ng-repeat="match in matches track by $index" ng-click="selectMatch($index)">
-      <a href="javascript:;" role="option">
-        <span li-icon type="standard" icon="account" size="small"></span>
-        {{match.label}}
-      </a>
-    </li>
-  </ul>
+  <table class="slds-table slds-table--bordered" role="listbox">
+    <thead>
+      <tr>
+        <th colspan="{{lookupFields.length}}">
+          <span li-icon type="utility" icon="search" size="small" color="default"></span>
+          &quot;{{currentVal}}&quot; in {{theObject}}
+        </th>
+      </tr>
+      <tr>
+        <th>Name</th>
+        <th ng-repeat="field in lookupFields">{{field}}</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="match in matches track by $index" ng-click="selectMatch($index)" style="cursor: pointer;">
+        <td>{{match.label}}</td>
+        <td ng-repeat="field in lookupFields">{{getField(match.model, field)}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
