add labels to lookup dropdown

--- a/app/views/fields/lookup/lookup-dropdown.html
+++ b/app/views/fields/lookup/lookup-dropdown.html
@@ -2,20 +2,20 @@
   <table class="slds-table slds-table--bordered" role="listbox">
     <thead>
       <tr>
-        <th colspan="{{lookupFields.length}}">
+        <th colspan="{{dropdownFields.length}}">
           <span li-icon type="utility" icon="search" size="small" color="default"></span>
           &quot;{{currentVal}}&quot; in {{theObject}}
         </th>
       </tr>
-      <tr>
-        <th>Name</th>
-        <th ng-repeat="field in lookupFields">{{field}}</th>
+      <tr ng-if="matches.length > 0">
+        <th class="slds-text-heading--small">Name</th>
+        <th class="slds-text-heading--small" ng-repeat="field in dropdownFields">{{field.Label}}</th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="match in matches track by $index" ng-click="selectMatch($index)" style="cursor: pointer;">
         <td>{{match.label}}</td>
-        <td ng-repeat="field in lookupFields">{{getField(match.model, field)}}</td>
+        <td ng-repeat="field in dropdownFields">{{getField(match.model, field.Name)}}</td>
       </tr>
     </tbody>
   </table>
