added rich text functionality, added to demo page, some linting

--- a/app/views/fields/field-wysiwyg.html
+++ b/app/views/fields/field-wysiwyg.html
@@ -1,1 +1,2 @@
-<trix-editor></trix-editor>
+<input id="{{wysiwygId}}" ng-value="content" type="hidden">
+<trix-editor input="{{wysiwygId}}" class="slds-textarea"></trix-editor>
