--- a/app/views/fields/date/field-date-yearpicker.html
+++ b/app/views/fields/date/field-date-yearpicker.html
@@ -1,4 +1,4 @@
-<div class="slds-dropdown slds-dropdown--left slds-dropdown--menu" ng-if="yearPickerOpen">
+<div class="slds-dropdown slds-dropdown--left slds-dropdown--menu li-datepicker-year-dropdown" ng-if="yearPickerOpen">
 	<ul class="slds-dropdown__list" role="menu">
 		<!-- <li id="menu-0-0" href="#" class="slds-dropdown__item"><a href="#" class="slds-truncate" role="menuitem">Menu Item One</a></li>
 		<li id="menu-1-1" href="#" class="slds-dropdown__item"><a href="#" class="slds-truncate" role="menuitem">Menu Item Two</a></li>
