add time to datepicker

--- a/app/views/fields/date/field-date-dropdown.html
+++ b/app/views/fields/date/field-date-dropdown.html
@@ -47,10 +47,21 @@
       </thead>
       <tbody>
         <tr ng-repeat="week in month.weeks">
-          <td class="datepicker-day" ng-class="{ 'slds-disabled-text': !day.inCurrentMonth, 'slds-is-selected': getCurrentDateAsMoment().isSame(day.moment) }" role="gridcell" ng-repeat="day in week.days" ng-attr-aria-disabled="{{!day.inCurrentMonth}}" ng-click="selectDay(day)">
+          <td class="datepicker-day" ng-class="{ 'slds-disabled-text': !day.inCurrentMonth, 'slds-is-selected': getCurrentDateAsMoment().isSame(day.moment, 'day') }" role="gridcell" ng-repeat="day in week.days" ng-attr-aria-disabled="{{!day.inCurrentMonth}}" ng-click="selectDay(day)">
             <span class="slds-day">{{day.label}}</span>
           </td>
         </tr>
       </tbody>
     </table>
+    <div class="slds-grid" ng-if="showTime">
+      <div class="slds-col">
+        <input type="text" class="slds-input" ng-model="hour" ng-change="changeHour(hour)" />
+      </div>
+      <div class="slds-col">
+        <input type="text" class="slds-input" ng-model="minute" ng-change="changeMinute(minute)" />
+      </div>
+      <div class="slds-col">
+        <input type="button" class="slds-button slds-button--neutral" value="{{ampm}}" ng-click="changeAMPM()" />
+      </div>
+    </div>
   </div>
