move css back into picklist template

--- a/app/views/fields/field-picklist.html
+++ b/app/views/fields/field-picklist.html
@@ -1,3 +1,26 @@
+<style>
+  .picklist-label {
+    margin: auto;
+    padding: 0px 50px;
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    cursor: default;
+    font-size: 10px;
+  }
+  .slds-picklist__options {
+    width: initial;
+  }
+  div.slds-picklist--draggable[disabled] .slds-picklist__item > span:hover {
+    background-color: #e0e5ee;
+    cursor: not-allowed; 
+  }
+  div.slds-picklist--draggable[disabled] .slds-picklist__options {
+    background-color: #e0e5ee;
+    border-color: #a8b7c7;
+    cursor: not-allowed;
+  }
+</style>
 <div class="slds-picklist--draggable slds-grid" style="display: flex; flex-flow: row wrap;" ng-disabled="disabled">
   <div class="slds-form-element" style="flex: 0.5 1 0%;">
     <div class="slds-picklist slds-picklist--multi">
